# serializer version: 1
# name: test_switch[switch.adguard_home_filtering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.adguard_home_filtering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filtering',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Filtering',
    'platform': 'adguard',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtering',
    'unique_id': 'adguard_127.0.0.1_3000_switch_filtering',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.adguard_home_filtering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AdGuard Home Filtering',
    }),
    'context': <ANY>,
    'entity_id': 'switch.adguard_home_filtering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[switch.adguard_home_parental_control-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.adguard_home_parental_control',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Parental control',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Parental control',
    'platform': 'adguard',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'parental',
    'unique_id': 'adguard_127.0.0.1_3000_switch_parental',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.adguard_home_parental_control-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AdGuard Home Parental control',
    }),
    'context': <ANY>,
    'entity_id': 'switch.adguard_home_parental_control',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[switch.adguard_home_protection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.adguard_home_protection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Protection',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Protection',
    'platform': 'adguard',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'protection',
    'unique_id': 'adguard_127.0.0.1_3000_switch_protection',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.adguard_home_protection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AdGuard Home Protection',
    }),
    'context': <ANY>,
    'entity_id': 'switch.adguard_home_protection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[switch.adguard_home_query_log-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.adguard_home_query_log',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Query log',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Query log',
    'platform': 'adguard',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'query_log',
    'unique_id': 'adguard_127.0.0.1_3000_switch_querylog',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.adguard_home_query_log-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AdGuard Home Query log',
    }),
    'context': <ANY>,
    'entity_id': 'switch.adguard_home_query_log',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[switch.adguard_home_safe_browsing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.adguard_home_safe_browsing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Safe browsing',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Safe browsing',
    'platform': 'adguard',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'safe_browsing',
    'unique_id': 'adguard_127.0.0.1_3000_switch_safebrowsing',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.adguard_home_safe_browsing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AdGuard Home Safe browsing',
    }),
    'context': <ANY>,
    'entity_id': 'switch.adguard_home_safe_browsing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[switch.adguard_home_safe_search-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.adguard_home_safe_search',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Safe search',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Safe search',
    'platform': 'adguard',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'safe_search',
    'unique_id': 'adguard_127.0.0.1_3000_switch_safesearch',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.adguard_home_safe_search-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AdGuard Home Safe search',
    }),
    'context': <ANY>,
    'entity_id': 'switch.adguard_home_safe_search',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
